style.css
@font-face {
  font-family: 'comicoro';
  src: url('res/fonts/comicoro-webfont.woff2') format('woff2'),
  url('res/fonts/comicoro-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  font-family: 'comicoro', sans-serif;
}

.pixel-perfect {
  image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
  image-rendering: -moz-crisp-edges;          /* Firefox                        */
  image-rendering: -o-crisp-edges;            /* Opera                          */
  image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
  image-rendering: pixelated;                 /* Universal support since 2021   */
  image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
  -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
}

html {
  font-size: clamp(24px, 2.5svh, 48px);
  scroll-behavior: smooth;
}

img, video {
  pointer-events: none;
}

h1 {
  font-family: 'Cherry Bomb One', sans-serif;
  letter-spacing: 0.1rem;
  font-size: clamp(36px, 3.5svh, 48px);

  text-transform: uppercase;

  margin: 0;
}

h2 {
  font-weight: 400;
  text-transform: uppercase;
  color: var(--orange-yellow);
}

h3 {
  font-weight: 400;
  color: var(--orange-yellow);
}

a {
  text-decoration: none;
  color: var(--white);
}

a:hover {
  text-decoration: underline;
}

a:active {
  color: var(--yellow);
}

body {
  background-color: #3671E9;
  color: var(--white);
  
  margin: 0;

  overflow-x: hidden;
}

.bg-grid {
  background-image: linear-gradient(180deg, #3671E900 0%, #3671E9FF 90%), url("res/bg/grid.svg");

  width: 200%;
  height: 80svh;

  position: absolute;
  top: 0;
  left: -50%;
  z-index: -100;
}

header {
  position: fixed;
  z-index: 100;

  width: 100svw;
  max-height: 3svh;
  padding: calc(max(2svh, 1.75%)) 10% 2% 10%;
  
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

#header-bg {
  --_blur-amount: 4px;

  width: 100%;
  height: 100%;

  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  
  background-image: linear-gradient(0, #3671E900 10%, #3671E9EE 75%);
  opacity: 0;
  transition: opacity ease-out 500ms;
  
  mask: linear-gradient(0, #00000022 10%, #000000FF 25%);
  -webkit-backdrop-filter: blur(var(--_blur-amount));
  backdrop-filter: blur(var(--_blur-amount));
}

.header-opaque > #header-bg {
  opacity: 1;
}

.prevent-selection {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

.header-links {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 1rem;
}

#content {
  width: calc(min(90%, 2400px));
  margin: 0 auto 1rem auto;

  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  gap: 10vh;

  position: relative;
}

.section {
  position: relative;
  
  margin: 0 auto;
  width: 100%;
}

.section-background {
  position: absolute;

  width: 2400px;
  z-index: -99;
}

#hero {
  height: 100svh;

  position: relative;
}

.bg-doodles-hero {
  top: calc(50% - 18.5svh);
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
}

.bottom {
  position: absolute;
  width: 100%;

  bottom: 2.5svh;
  left: 0;
}

.peeps {
  height: min(12rem, 470px);
  width: 100%;
}

.bg-peeps {
  height: 100%;
  max-width: none;
  width: auto;
  
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translateY(-50%) translateX(-50%);
}

.logo {
  width: min(18rem, 80%);
  position: absolute;
  top: 20vh;
  left: 50%;
  transform: translateY(-10%) translateX(-50%);
}

.link-wishlist {
  text-decoration: none;
  text-transform: uppercase;

  padding: 10px 50px;
  border: var(--white) 2px solid;
  border-radius: 40px;

  background-color: #131313D0;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 0.3em;

  transition: 100ms;
}

.link-wishlist * {
  fill: var(--white);
  white-space: nowrap;
}

.link-wishlist:hover {
  cursor: pointer;
  background-color: #131313A0;
  gap: 0.5em;

  text-decoration: none;
}

.link-wishlist:active {
  background-color: #131313F0;
  border-color: var(--yellow);

  transition: 10ms;
}

.link-wishlist:active * {
  color: var(--yellow);
  fill: var(--yellow);
}

.btn-wishlist-hero {
  width: fit-content;
  
  position: absolute;
  left: 50%;
  top: 35%;
}

.btn-wishlist-hero > .link-wishlist {
  position: relative;
  left: -50%;
}

#trailer {
  --_trailer-height: min(50svh, 50svw);
  --_trailer-width: calc(16 * var(--_trailer-height) / 9);

  margin: 5rem 0;

  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1em;

  position: relative;
}

#trailer > iframe {
  height: var(--_trailer-height);
  width: var(--_trailer-width);
}

.game-description {
  height: fit-content;
  width: var(--_trailer-width);
  
  text-align: center;
}

#meet-mochi {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  margin: 0 2rem 2rem 2rem;
}

#mochi-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  position: relative;
}

#mochi-header {
  margin-right: 5rem;

  transform: rotate(-15deg);

  position: relative;
}

#mochi-header > h2 {
  font-size: clamp(48px, 4.236svw, 64px);
  color: #000;
  margin: 0;
}

#mochi-header-underline {
  position: absolute;
  bottom: 0.1rem;

  fill: var(--yellow);
  stroke: var(--yellow);

  z-index: -1;
}

#mochi-walk-cycle {
  width: min(40svw, 227px);
}

#mochi-marker {
  position: absolute;
  bottom: -2rem;
  transform: translateX(-110%);

  height: min(50%, 324px);
}

#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.about-section {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.about-section:nth-child(even) {
  flex-direction: row;
}

.about-section > * {
  position: relative;
}

.about-text {
  width: 35svw;
}

.about-image-container {
  height: fit-content;
  width: fit-content;
}

.about-image {
  width: min(50svw, 35svh);
  background-color: #000;
}

.about-image-border {
  width: 120%;
  height: 120%;

  position: absolute;
  top: -10%;
  left: -10%;

  fill: var(--yellow);
}

#bosses {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  text-align: center;
}

#boss-polaroid-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.boss-polaroid {
  height: min(4rem, 160px);
}

.boss-polaroid:nth-child(1) {
  transform: rotate(-1.75deg);
}

.boss-polaroid:nth-child(2) {
  transform: rotate(5deg);
}

.boss-polaroid:nth-child(3) {
  transform: rotate(-1deg);
}

.boss-polaroid:nth-child(4) {
  transform: rotate(0);
}

.boss-polaroid:nth-child(5) {
  transform: rotate(2deg);
}

#team {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.team-description {
  width: 35svw;
}

.team-polaroid {
  width: 10rem;
  height: auto;

  transform: rotate(15deg);
}

.footer {
  width: 100%;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;

  font-size: 0.8rem;
}

.social-links {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1rem;
}

.social-link > img {
  height: 0.8rem;
  transition: 100ms;
}

.social-link:hover {
  text-decoration: none;
}

.social-link:hover > img {
  transform: scale(125%);
}

.copyright {
  margin-top: 1.5rem;
  color: var(--copyright-light-blue);
}

@media screen and (max-width: 1080px) {
  header {
    flex-direction: column;
    max-height: none;
    padding: 0;
    padding-bottom: 4%;
    justify-content: center;
  }

  #header-bg {
    background-image: linear-gradient(0, #3671E900 0%, #3671E9EE 50%);
  }
}

@media screen and (max-width: 1000px) {
  #trailer {
    margin: 0;
  }

  .about-section {
    flex-direction: column-reverse;
    gap: 0;
  }

  .about-section:nth-child(even) {
    flex-direction: column-reverse;
  }
  
  .about-text {
    width: 85svw;
  }

  .about-image {
    width: 80svw;
  }

  #team {
    flex-direction: column;
    text-align: center;
  }

  #team > div {
    width: 100%;
  }
}

